<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ObtainingSamplesActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/fon2">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="450dp"
                android:layout_height="150dp"
                android:layout_marginTop="50dp"
                app:srcCompat="@drawable/experiment_01"/>

            <EditText
                android:id="@+id/date_measurement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="230dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="@string/date_measurement"
                android:inputType="date"/>

            <EditText
                android:id="@+id/start_time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/date_measurement"
                android:layout_below="@+id/date_measurement"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="@string/start_time"
                android:inputType="time"/>

            <EditText
                android:id="@+id/end_time"
                android:drawableLeft="@drawable/ic_action_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/start_time"
                android:layout_centerHorizontal="true"
                android:ems="10"
                android:layout_alignLeft="@+id/start_time"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:hint="@string/end_time"
                android:inputType="time"/>

            <EditText
                android:id="@+id/time_spent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/end_time"
                android:layout_below="@+id/end_time"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="@string/time_spent"
                android:inputType="time"/>

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/time_spent"
                android:layout_below="@+id/time_spent"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="@string/name"
                android:inputType="text"/>

            <EditText
                android:id="@+id/equipment"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/name"
                android:layout_below="@+id/name"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="@string/equipment"
                android:inputType="text"/>

            <EditText
                android:id="@+id/location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/equipment"
                android:layout_below="@+id/equipment"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="@string/location"
                android:inputType="text"/>

            <EditText
                android:id="@+id/do_exp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/location"
                android:layout_below="@+id/location"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="Выполнил задание"
                android:inputType="text"/>

            <EditText
                android:id="@+id/give_exp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/do_exp"
                android:layout_below="@+id/do_exp"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="Выдал задание"
                android:inputType="text"/>

            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/give_exp"
                android:layout_below="@+id/give_exp"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="Примечания"
                android:inputType="text"/>

            <EditText
                android:id="@+id/grease_mass"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/description"
                android:layout_below="@+id/description"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="@string/grease_mass"
                android:inputType="number"/>

            <EditText
                android:id="@+id/grease_output"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/grease_mass"
                android:layout_below="@+id/grease_mass"
                android:ems="10"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginRight="12dp"
                android:background="@drawable/ic_edit_text"
                android:drawableLeft="@drawable/ic_action_info"
                android:hint="@string/grease_output"
                android:inputType="number"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/grease_output"
                android:layout_below="@+id/grease_output"
                android:layout_marginTop="25dp"
                android:layout_marginRight="25dp"
                android:onClick="addExperiment"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/ic_edit_text"
                android:text="@string/add"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btnAdd"
                android:layout_below="@+id/btnAdd"
                android:layout_marginTop="15dp"
                android:layout_marginRight="25dp"
                android:onClick="deleteAllExperiments"
                android:backgroundTint="@color/colorAccent"
                android:background="@drawable/ic_edit_text"
                android:text="@string/delete"
                android:textColor="#ffffff"/>

        </RelativeLayout>

    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        app:headerLayout="@layout/header"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        app:itemTextColor="#000000"
        app:itemIconTint="#000000"
        app:menu="@menu/main1"
        android:layout_gravity="start">

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>