<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fon2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="450dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/experiment_01"/>

    <EditText
        android:id="@+id/date_measurement"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="230dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="@string/date_measurement"
        android:inputType="date"/>

    <EditText
        android:id="@+id/start_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date_measurement"
        android:layout_below="@+id/date_measurement"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="@string/start_time"
        android:inputType="time"/>

    <EditText
        android:id="@+id/end_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/start_time"
        android:layout_below="@+id/start_time"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="@string/end_time"
        android:inputType="time"/>

    <EditText
        android:id="@+id/time_spent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/end_time"
        android:layout_below="@+id/end_time"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="@string/time_spent"
        android:inputType="time"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time_spent"
        android:layout_below="@+id/time_spent"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="@string/name"
        android:inputType="text"/>

    <EditText
        android:id="@+id/equipment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="@string/equipment"
        android:inputType="text"/>

    <EditText
        android:id="@+id/location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/equipment"
        android:layout_below="@+id/equipment"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="@string/location"
        android:inputType="text"/>

    <EditText
        android:id="@+id/do_exp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/location"
        android:layout_below="@+id/location"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="Выполнил задание"
        android:inputType="text"/>

    <EditText
        android:id="@+id/give_exp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/do_exp"
        android:layout_below="@+id/do_exp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="Выдал задание"
        android:inputType="text"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/give_exp"
        android:layout_below="@+id/give_exp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="Примечания"
        android:inputType="text"/>

    <EditText
        android:id="@+id/grease_mass"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/description"
        android:layout_below="@+id/description"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="@string/grease_mass"
        android:inputType="number"/>

    <EditText
        android:id="@+id/grease_output"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/grease_mass"
        android:layout_below="@+id/grease_mass"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="@string/grease_output"
        android:inputType="number"/>

    <EditText
        android:id="@+id/et_ip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/grease_output"
        android:layout_below="@+id/grease_output"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="IP"/>

    <EditText
        android:id="@+id/et_port"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_ip"
        android:layout_below="@+id/et_ip"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/ic_edit_text"
        android:drawableLeft="@drawable/ic_action_info"
        android:hint="Порт"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_port"
        android:layout_below="@+id/et_port"
        android:id="@+id/bt_send"
        android:text="Отправить"
        android:backgroundTint="@color/colorAccent"
        android:background="@drawable/ic_edit_text"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textColor="#ffffff"/>

</RelativeLayout>

</ScrollView>